sticky_session/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sitcky-svc
spec:
  selector:
    app: sticky-svc
  ports:
   - protocol: "TCP"
     port: 80
     targetPort: 8080
  type: ClusterIP
