sticky_session/destination_rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: sticky-svc
spec:
    host: sticky-svc
    subsets:
      - name: v1
        labels:
          version: v1
    trafficPolicy:
      loadBalancer:
        consistentHash:
          httpHeaderName: x-user
